--- a/connexion-app/package.json
+++ b/connexion-app/package.json
@@ -8,15 +8,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "firebase": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.0",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
+    "react-redux-firebase": "^3.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-text-truncate": "^0.16.0",
     "redux": "^4.0.5",
+    "redux-firestore": "^0.14.0",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
