--- a/connexion-app/.env
+++ b/connexion-app/.env
@@ -1,5 +1,6 @@
 REACT_APP_FIREBASE_API_KEY=AIzaSyCdkanoeon-NiwJKbLq9GNIokYOK9ntK94
 REACT_APP_FIREBASE_AUTH_DOMAIN=connexion-dev-f8d6e.firebaseapp.com
+REACT_APP_DATABASE_URL=https://connexion-dev-f8d6e-default-rtdb.firebaseio.com
 REACT_APP_FIREBASE_PROJECT_ID=connexion-dev-f8d6e
 REACT_APP_FIREBASE_STORAGE_BUCKET=connexion-dev-f8d6e.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=570249998361
