--- a/connexion-app/package.json
+++ b/connexion-app/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
     "react-hook-form": "^6.14.0",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
