--- a/connexion-app/package.json
+++ b/connexion-app/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.2.2",
     "react": "^17.0.1",
+    "react-content-loader": "^5.1.4",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
     "react-hook-form": "^6.14.0",
